// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: Component should render correctly 1`] = `
<styled.div>
  <Component
    error={false}
    iconComponent={null}
    name="A_FIELD_NAME"
    onChange={[Function]}
    value=""
  />
</styled.div>
`;

exports[`TextInput: Component should render edit icon 1`] = `
<styled.div>
  <Component
    error={false}
    iconComponent={
      <ForwardRef(styled.div)>
        <Unknown />
      </ForwardRef(styled.div)>
    }
    name="A_FIELD_NAME"
    onChange={[Function]}
    value=""
  />
</styled.div>
`;

exports[`TextInput: Component should render error 1`] = `
<styled.div>
  <Component
    error={true}
    iconComponent={null}
    name="A_FIELD_NAME"
    onChange={[Function]}
    value=""
  />
  <styled.div>
    An error message
  </styled.div>
</styled.div>
`;
